app/assets/stylesheets/navbar.scss
.navbar-toggler {
  border: 0px !important;
}
#nav {
  transition: background-color 0.4s ease-out, font-size 0.1s ease, height 0.15s ease, top 0.4s ease-out;
}
.navbar-brand {
  @media screen and (min-width: 768px) {
    margin-right: 1.5em !important;
  }
}

.nav-container {
  max-width: 100% !important;
  @media screen and (min-width: 992px) {
    max-width: 90% !important;
  }
  @media screen and (min-width: 1200px) {
    max-width: 70% !important;
  }
}
.navbar-social {
  display: flex;
  justify-content: space-around;
  a {
    padding-left: 15px;
    font-size: 1.8em;
    @media screen and (min-width: 768px) {
      font-size: 1.2em;
    }
  }
}

/* Nav links */
.navbar-transparent {
  .navbar-brand {
    color: rgba(250, 250, 250, 0.9);
  }
  .nav-link {
    color: rgba(250, 250, 250, 0.9);
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) !important;
  }
}

.nav-link {
  position: relative !important;
  padding: 0.2rem 0.6rem !important;
  font-size: 0.84em !important;
  font-weight: 500;
  @media screen and (min-width: 992px) {
    font-size: 0.9em;
  }
}

.nav-link.active {
  font-weight: 800;
}

